--- a/index.html
+++ b/index.html
@@ -1,15 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hot Gadget</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-  <h1>hi im in</h1>
-  
+  <div class="container">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="logo.png" alt="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Products</a>
+          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="#">Contact Us</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+</div>
+
+<div class="container">
+  <div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-md-6" style="background-image: url('bg-2.png');background-repeat: no-repeat; left:100px; bottom:100px;">
+            <h1>MACKBOOK PRO</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, placeat!</p>
+            <button class="buy-now">BUY NOW >></button>
+          </div>
+          <div class="col-md-6" style="background-image: url('bg-1.png'); background-repeat: no-repeat;">
+            <img src="banner-products/product-1.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-md-6" style="background-image: url('bg-2.png');background-repeat: no-repeat; left:100px; bottom:100px;">
+            <h1>QCY Soundbox</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, velit.</p>
+            <button class="buy-now">BUY NOW >></button>
+          </div>
+          <div class="col-md-6" style="background-image: url('bg-1.png'); background-repeat: no-repeat;">
+            <img src="banner-products/slider-1.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-md-6" style="background-image: url('bg-2.png');background-repeat: no-repeat; left:100px; bottom:100px;">
+            <h1>JBL Soundbox</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, repudiandae.</p>
+            <button class="buy-now">BUY NOW >></button>
+          </div>
+          <div class="col-md-6" style="background-image: url('bg-1.png'); background-repeat: no-repeat;">
+            <img src="banner-products/slider-3.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
+
+<div class="container">
+  <div class="d-flex justify-content-between align-items-center card-item-head">
+    <h3>Smartphone</h3>
+    <a href="#" class="see-all">See all</a>
+  </div>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="phone/phone-1.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">I Phone 11</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <h3>999$</h3>
+          <button class="buy-now">BUY NOW >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="phone/phone-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Samsungg Galaxy S22 Ultra</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <h3>699$</h3>
+          <button class="buy-now">BUY NOW >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="phone/phone-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Poco X2</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <h3>299$</h3>
+          <button class="buy-now">BUY NOW >></button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="d-flex justify-content-between align-items-center card-item-head">
+    <h3>Laptops</h3>
+    <a href="#" class="see-all">See all</a>
+  </div>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="laptop/product-1.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Asus Vivo Book</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <h3>2999$</h3>
+          <button class="buy-now">BUY NOW >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="laptop/product-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Razer Blade 15</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <h3>1699$</h3>
+          <button class="buy-now">BUY NOW >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="laptop/product-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Xiaomi Notebook Pro</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <h3>1299$</h3>
+          <button class="buy-now">BUY NOW >></button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <h3 class="cata-text d-flex justify-content-center align-items-center">Catagories</h3>
+  <div class="row justify-content-center align-items-center cata">
+    <div class="col md-4 cata1 d-flex justify-content-center align-items-center">
+      <img src="Categories/bag.png" alt="">
+    </div>
+    <div class="col md-4 cata2 d-flex flex-column align-items-center justify-content-center">
+      <img src="Categories/perfume.png" alt="" class="cata2-pic1">
+      <img src="Categories/shoe.png" alt="" class="cata2-pic1">
+    </div>
+    <div class="col md-4 cata3">
+      <img src="Categories/pale-order.png" alt="" class="pale-ordr">
+    </div>
+  </div>
+</div>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 </body>
 </html>
